Regression: Grease Pencil modes other than Draw use a wrong radial size operator #103764

Closed
opened 2023-01-09 18:33:50 +01:00 by Julien Kaspar · 10 comments
Member

System Information
Operating system: Linux-5.15.0-57-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-09 08:47, hash: f3df7b4fbd
Worked: (newest version of Blender that worked as expected)

Short description of error
There has been a recent feature addition that the Draw mode radial size operator on F
is easier to control small brush sizes and to accurately display the bush size in scene space.
But the other modes are now incorrectly using this new operator as well, making it very hard to control their larger size,
and provides a false preview.

Exact steps for others to reproduce the error

  • Add a grease pencil object
  • Switch to Draw mode and use the F key to change the size, and draw some stroke
  • Switch to Sculpt mode and use the F key to change the size
**System Information** Operating system: Linux-5.15.0-57-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-09 08:47, hash: `f3df7b4fbd` Worked: (newest version of Blender that worked as expected) **Short description of error** There has been a recent feature addition that the Draw mode radial size operator on `F` is easier to control small brush sizes and to accurately display the bush size in scene space. But the other modes are now incorrectly using this new operator as well, making it very hard to control their larger size, and provides a false preview. **Exact steps for others to reproduce the error** - Add a grease pencil object - Switch to Draw mode and use the `F` key to change the size, and draw some stroke - Switch to Sculpt mode and use the `F` key to change the size
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

CC @antoniov : mind checking?

CC @antoniov : mind checking?
Antonio Vazquez self-assigned this 2023-01-10 15:14:27 +01:00

Don't think this report is high...really, it's not a bug, but a missing feature. I fixed draw mode, but the other modes are working as before. Anyway, I'm going to see if I can apply the same logic.

Don't think this report is high...really, it's not a bug, but a missing feature. I fixed draw mode, but the other modes are working as before. Anyway, I'm going to see if I can apply the same logic.
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Author
Member

@antoniov Since the other modes use a View based Radius Unit I would say the old behavior fits better.
But the new behavior in Draw mode fits really well in any mode when a Scene based Radius Unit is used.

@JosephEagar You think we could use the same behavior for sculpt mode when changing the radius unit brush setting to Scene?

@antoniov Since the other modes use a View based Radius Unit I would say the old behavior fits better. But the new behavior in Draw mode fits really well in any mode when a Scene based Radius Unit is used. @JosephEagar You think we could use the same behavior for sculpt mode when changing the radius unit brush setting to `Scene`?

This issue was referenced by db688b62f9

This issue was referenced by db688b62f9e2d5a73d7bfaaac7cb0f5b2e8c1d6b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

@JulienKaspar You were right, there was a bug. The problem was the radial control was checking the tool, but the tool value (zero in this case) was the same for Sculpt mode, so it was required to check the mode too or the radial control was doing scale transformation of the cursor in Sculpt mode and this was wrong.

@JulienKaspar You were right, there was a bug. The problem was the radial control was checking the tool, but the tool value (zero in this case) was the same for Sculpt mode, so it was required to check the mode too or the radial control was doing scale transformation of the cursor in Sculpt mode and this was wrong.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103764
No description provided.